--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
-<h1>Saylani Web and Mobile - Batch6</h1>
-<h1>Assignment No. 01</h1>
-<h2>Learn Wuth Naveed Sarwar</h2>
-<h3>First Class</h3>
-<h4>Batch6</h4>
-<h5>Let's start the journey</h5>
-<h6>Let's start and grow together</h6>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus repudiandae consequatur earum delectus! Molestiae neque laborum voluptatibus, blanditiis qui saepe, voluptatem nihil alias officiis odio perferendis doloremque consectetur beatae vero?</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Cards</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+</head>
+<body>
+    <!-- <h1 class="text-center fw-bolder py-5">CARDS SECTION</h1> -->
+    <section>
+        <div class="container pt-5 text-center">
+            <div class="row">
+            
+            <h1>How to change themes of VS code</h1>
+            <h2>Shortcut key</h2>
+            <h3>Ctrl + k + t</h3>
+            <h4>Thanks for watching</h4>
+                
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- Bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+</body>
+</html>
